# cerberus-firmware

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pylintrc  CODEOWNERS  Makefile  README.md  SECURITY.md  build-docker.sh  create_monorepo.py  emulator.img  pyproject.toml
.clusterfuzzlite/: Dockerfile
ci/: Dockerfile  build.yml  deploy.yml  make_test_languages.py  shell.nix  test.yml
common/: .gitrepo  README.md  models.json
core/: .gitignore  CHANGELOG.T2B1.md  CHANGELOG.T2T1.md  CHANGELOG.md  Makefile  README.md  SConscript.boardloader  SConscript.bootloader  SConscript.bootloader_ci  SConscript.bootloader_emu  SConscript.firmware  SConscript.prodtest  SConscript.reflash  SConscript.unix  SConstruct  emu.py  emu.sh  tmpzu_dbgmz.json
crypto/: .gitignore  .gitrepo  Makefile  README.md  buffer.c  buffer.h  chacha_drbg.c  chacha_drbg.h  der.c  der.h  ecdsa_internal.h  groestl.c  groestl.h  groestl_internal.h  setup.py  slip39.c  slip39.h  slip39_english.c  slip39_wordlist.h
docs/: SUMMARY.md  book.toml  index.md
legacy/: Makefile  Makefile.include  README.md  buttons.c  buttons.h  common.c  common.h  compiler_traits.h  flash.c  flash.h  fw_signatures.c  fw_signatures.h  layout.c  layout.h  memory.c  memory.h  norcow_config.h  oled.c  oled.h  random_delays.c  random_delays.h  rng.c  rng.h  setup.c  setup.h  supervise.c  supervise.h  timer.c  timer.h  util.c  util.h
python/: AUTHORS  CHANGELOG.md  MANIFEST.in  README.md  (+5 more)
rust/cerberus-client/: Cargo.toml  README.md
rust/cerberus-client/examples/: features.rs
rust/cerberus-client/scripts/: build_messages
rust/cerberus-client/src/: utils.rs
rust/cerberus-client/src/client/: common.rs  ethereum.rs
rust/cerberus-client/src/flows/: sign_tx.rs
rust/cerberus-client/src/messages/: generated.rs  mod.rs
rust/cerberus-client/src/transport/: error.rs  udp.rs
(+1437 files in other folders)
